# giglet

./: README.md  meson.build  org.gnome.Giglet.json  org.gnome.Giglet.json~
data/: meson.build  org.gnome.Giglet.appdata.xml.in  org.gnome.Giglet.desktop.in  org.gnome.Giglet.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: font-preview.ui  giglet-window.c  giglet-window.h  giglet-window.ui  giglet.gresource.xml  main.c  meson.build
